modified:   .idea/workspace.xml 	modified:   backend/general/account-service/src/main/java/project/general_account_service/constant/AppUserRoles.java 	modified:   backend/general/account-service/src/main/java/project/general_account_service/controller/common/AuthController.java 	modified:   backend/general/account-service/src/main/java/project/general_account_service/mapper/AppUserMapper.java 	modified:   backend/general/account-service/src/main/java/project/general_account_service/model/dto/object/AppUserDTO.java 	modified:   backend/general/account-service/src/main/java/project/general_account_service/model/dto/response/AppUserVerifyResponseDTO.java 	modified:   backend/general/account-service/src/main/java/project/general_account_service/model/entity/AppUser.java 	modified:   backend/general/account-service/src/main/java/project/general_account_service/model/entity/enums/AppUserRole.java 	modified:   backend/general/account-service/src/main/java/project/general_account_service/service/account/AccountSyncService.java 	modified:   backend/office/auth-provider/src/main/java/project/office_auth_provider/config/SecurityConfig.java 	modified:   backend/shared/general-auth-starter/src/main/java/project/shared_general_auth_starter/service/auth/FirebaseAuthService.java 	modified:   backend/shared/general-common-lib/src/main/java/project/shared_general_common_lib/constant/role/SystemRole.java 	modified:   backend/shared/general-common-lib/src/main/java/project/shared_general_common_lib/constant/role/SystemRoles.java 	modified:   backend/shared/general-starter/src/main/java/project/shared_general_starter/converter/JwtAuthenticationConverter.java 	modified:   backend/shared/office-common-lib/src/main/java/project/shared_office_common_lib/constant/role/SystemRole.java 	modified:   backend/shared/office-common-lib/src/main/java/project/shared_office_common_lib/constant/role/SystemRoles.java